tests/cases/compiler-development/artifact/errors/diagnostic-generic-uninferred.diagnostic
diagnostic error code=ari/compiler family=general message="generic type 'T' could not be inferred for 'make'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-uninferred.ari" display="tests/cases/generics/errors/generic-uninferred.ari" bytes=73
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-uninferred.ari" line=6 column=10 end_line=6 end_column=14 byte_start=63 byte_end=67 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-uninferred.ari:6:10\n   |\n 6 |   return make();\n   |          ^^^^"
